log
Mon 13 May 2024 10:10:53 PM UTC: 
 tests:  0|5
total_score: 0/70
eee2db6
Mon 13 May 2024 10:20:57 PM UTC: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  2|4
total_score: 15/70
3676b4f
Mon 13 May 2024 10:21:04 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|4
total_score: 15/70
4da4b47
Mon 13 May 2024 10:26:40 PM UTC: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:23: error: expected expression before ‘[’ token
   47 |    int filas[9][10] = [0];
      |                       ^
sudoku.c:48:26: error: expected expression before ‘[’ token
   48 |    int columnas[9][10] = [0];
      |                          ^
sudoku.c:49:27: error: expected expression before ‘[’ token
   49 |    int submatriz[9][10] = [0];
      |                           ^
Compilation failed
36d076c
Mon 13 May 2024 10:33:00 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
3f32cde
Mon 13 May 2024 10:37:46 PM UTC: 
 sudoku.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
7aa7897
Mon 13 May 2024 10:38:34 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
8dcde54
Mon 13 May 2024 10:38:46 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
1c4ca23
Sat 18 May 2024 12:06:51 AM UTC: 
 sudoku.c | 37 ++++++++++++-------------------------
 1 file changed, 12 insertions(+), 25 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:57:81: error: subscripted value is neither array nor pointer nor vector
   57 |              if(filas[i][num - 1] == 1 || columnas[j][num - 1] == 1 || submatriz[submatriz][num - 1] == 1){
      |                                                                                 ^
sudoku.c:56:18: error: variable ‘submatriz’ set but not used [-Werror=unused-but-set-variable]
   56 |              int submatriz = (i/3)*3 + (j/3);
      |                  ^~~~~~~~~
sudoku.c:49:8: error: unused variable ‘submatriz’ [-Werror=unused-variable]
   49 |    int submatriz[9][9] = {0};
      |        ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b094c86
Sat 18 May 2024 12:07:40 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
578f211
Sat 18 May 2024 12:08:39 AM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|3
total_score: 35/70
9ede144
Sat 18 May 2024 03:18:38 AM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|3
total_score: 35/70
323ff50
Sat 18 May 2024 03:19:13 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|2
total_score: 45/70
d1b048d
